<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/background_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/fragment_datalog_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:longClickable="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay" >

        <TextView
            android:id="@+id/fragment_datalog_logtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autoLink="none"
            android:clickable="false"
            android:duplicateParentState="false"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="30dp"
            android:freezesText="false"
            android:hint="@string/datalog_logtext_hint"
            android:linksClickable="false"
            android:longClickable="false"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:selectAllOnFocus="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/consoletext_color" >

            <requestFocus />
        </TextView>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color" >

        <EditText
            android:id="@+id/fragment_datalog_cmdline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/datalog_cmdline_hint"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/consoletext_color" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/fragment_datalog_clearlog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:text="@string/datalog_clearlog" />

        <Button
            android:id="@+id/fragment_datalog_savelog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datalog_savelog" />

        <CheckBox
            android:id="@+id/fragment_datalog_cr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datalog_cr_label" />

        <CheckBox
            android:id="@+id/fragment_datalog_lf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datalog_lf_label" />

        <Button
            android:id="@+id/fragment_datalog_send"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/datalog_send"
            android:textColor="@color/consoletext_color" />

    </LinearLayout>

</LinearLayout>
